syntax = "proto3";

option csharp_namespace = "Saes.Protos.ModelServices";

import "google/protobuf/wrappers.proto";
import "models.proto";
import "statuses.proto";

package businessEntityType;

// NOT_IMPLEMENTED

service BusinessEntityTypeService {
    rpc Search (BusinessEntityTypeLookup) returns (BusinessEntityTypeLookupResponse);
    rpc Add (BusinessEntityTypeDataRequest) returns (BusinessEntityTypeLookupResponse);
    rpc Remove (BusinessEntityTypeLookup) returns (statuses.StatusResponse);
    rpc Edit (BusinessEntityTypeDataRequest) returns (statuses.StatusResponse);
}

message BusinessEntityTypeLookup
{
    google.protobuf.Int32Value businessEntityTypeId = 1;
    google.protobuf.StringValue name = 2;
}

// Add or Edit
message BusinessEntityTypeDataRequest
{
    int32 businessEntityTypeId = 1;
    string name = 2;
}

// Comment
message BusinessEntityTypeLookupResponse
{
    repeated models.BusinessEntityTypeDto data = 1;
}